--- a/style.css
+++ b/style.css
@@ -1,6 +1,22 @@
 .carousel-caption{
     width: 600px;
 }
+
 .carousel-caption h1{
     font-size: 48px;
+}
+section{
+    margin-bottom: 100px;
+}
+.moments-section{
+    position: relative;
+}
+.toast-section{
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translateY(-40%);
+    background: #FFFFFF;
+    box-shadow: 0px 9px 31px rgba(0, 0, 0, 0.15);
+    
 }
