--- a/style.css
+++ b/style.css
@@ -20,3 +20,35 @@ section{
     box-shadow: 0px 9px 31px rgba(0, 0, 0, 0.15);
     
 }
+.packages p, .packages li{
+    color: #848199;
+}
+.packages li{
+    list-style-type: none;
+}
+.plan-button a{
+    color: #3F87F5;
+    background-color: rgba(244, 150, 209, .1)
+    ;
+    border-radius: 24px;
+    font-weight: 500;
+}
+.hot-button{
+    top:-15px;
+    right: 20px;
+}
+.selected {
+    background: #3F87F5;
+  box-shadow: 0px 42px 10px rgba(63, 135, 245, 0.25);
+  border-radius: 26px;
+}
+.selected a{
+    background-color: white;
+}
+.selected .hot-button{
+    border-radius: 13.5px;
+}
+/* .packages li i{
+    color: rgba(82, 67, 194, 0.103693);
+    
+} */
